shopping-list/src/App.css
body * {
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
  font-size: 2rem;
}

.App {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
  padding: 0.5rem;
}

.App__header {
  display: flex;
  align-items: stretch;
  justify-content: flex-start;
  flex-direction: row;
  width: 100%;
}

.App__header button {
  width: 44px;
  height: 44px;
}

.App__header input {
  margin-left: 0.5rem;
  width: calc(100% - 44px - 0.5rem);
}

.App__body {
  display: block;
  width: 100%;
  height: calc(100vh - 88px - 1rem);
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-top: 1px solid #282828;
  border-bottom: 2px solid #282828;
}

.reset-btn {
  cursor: pointer;
}

.App__body-row {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: row;
  margin-top: 0.25rem;
}

.App__body-row input,
.App__body-row button {
  width: 44px;
  height: 44px;
}

.App__body-row button {
  background-color: firebrick;
  color: white;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

.App__body-row p {
  width: calc(100% - 88px);
  text-indent: 0.25rem;
}

